--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
     "@hookform/resolvers": "^5.2.2",
+    "@mantine/core": "^7.13.2",
+    "@mantine/dates": "^7.13.2",
+    "@mantine/hooks": "^7.13.2",
     "axios": "^1.12.2",
+    "dayjs": "^1.11.11",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
     "react-router-dom": "^7.9.4",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.1.5"
+
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
