--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,1 +1,8 @@
-VITE_API_BASE=http://localhost:8080/rbos/api
+VITE_API_BASE=http://localhost:8080/RBOS/api
+VITE_WS_BASE=ws://localhost:8080
+
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USERNAME=your-email@gmail.com
+SMTP_PASSWORD=your-app-password
+ADMIN_EMAIL=admin@restaurantgem.com
