--- a/build.xml
+++ b/build.xml
@@ -10,10 +10,9 @@
     <property name="lib.dir" value="${webinf.dir}/lib"/>
     <property name="war.file" value="${dist.dir}/${ant.project.name}.war"/>
 
-    <property name="java17.home" value="../../Program Files/Java/jdk-17"/> <!-- Path to JDK 17 -->
+    <property name="java17.home" value="../../Program Files/Java/jdk-17"/>
 
-    <!-- GlassFish paths - this should be adjusted for the installation that's running this implementation -->
-    <property name="glassfish.home" value="../../glassfish-7.0.25/glassfish7"/>
+    <property name="glassfish.home" value="C:/glassfish7"/>
     <property name="servlet.api.jar" value="${glassfish.home}/glassfish/modules/jakarta.servlet-api.jar"/>
     <property name="jakarta.mail.api.jar" value="${glassfish.home}/glassfish/modules/jakarta.mail-api.jar"/>
     <property name="jakarta.activation.api.jar" value="${glassfish.home}/glassfish/modules/jakarta.activation-api.jar"/>
@@ -21,6 +20,10 @@
     <property name="jakarta.websocket.client.api.jar" value="${glassfish.home}/glassfish/modules/jakarta.websocket-client-api.jar"/>
     <property name="websocket.api.osgi.jar" value="${glassfish.home}/glassfish/modules/webservices-api-osgi.jar"/>
     <property name="websocket.osgi.jar" value="${glassfish.home}/glassfish/modules/webservices-osgi.jar"/>
+
+    <property name="RBOS_DB" value="${user.home}/.rbos/restaurant.db"/>
+    <property name="SEED_DB" value="${basedir}/src/main/resources/backend/restaurant.db"/>
+    <dirname property="RBOS_DIR" file="${RBOS_DB}"/>
 
     <path id="compile.classpath">
         <fileset dir="${lib.dir}">
@@ -38,7 +41,6 @@
     <target name="clean">
         <delete dir="${build.dir}"/>
         <delete dir="${dist.dir}"/>
-        <!-- Clean webapp content except WEB-INF -->
         <delete includeEmptyDirs="true">
             <fileset dir="${webcontent.dir}">
                 <include name="**/*"/>
@@ -66,6 +68,19 @@
         </copy>
     </target>
 
+    <target name="-guard-db">
+        <condition property="db.in.repo">
+            <contains string="${RBOS_DB}" substring="${basedir}"/>
+        </condition>
+        <fail if="db.in.repo" message="RBOS_DB must be outside the repo (e.g., ${user.home}/.rbos/restaurant.db)."/>
+    </target>
+
+    <target name="bootstrap-db">
+        <mkdir dir="${RBOS_DIR}"/>
+        <copy file="${SEED_DB}" tofile="${RBOS_DB}" overwrite="false" verbose="true"/>
+        <echo>Live DB: ${RBOS_DB}</echo>
+    </target>
+
     <target name="init" depends="clean,build-frontend">
         <mkdir dir="${build.dir}"/>
         <mkdir dir="${dist.dir}"/>
@@ -86,7 +101,7 @@
         <echo message="Java classes compiled"/>
     </target>
 
-    <target name="package-war" depends="compile">
+    <target name="package-war" depends="-guard-db, bootstrap-db, compile">
         <war destfile="${war.file}" webxml="${webinf.dir}/web.xml">
             <fileset dir="${webcontent.dir}">
                 <include name="**/*"/>
@@ -97,7 +112,6 @@
         <echo message="WAR file created at: ${war.file}"/>
     </target>
 
-    <!-- Deploy to GlassFish -->
     <target name="deploy" depends="package-war">
         <echo message="Deploying to GlassFish..."/>
         <exec executable="${glassfish.home}/bin/asadmin.bat">
