--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,8 @@ Thumbs.db
 .vscode/*
 !.vscode/extensions.json
 
+# AI assistant files
+.github/copilot-instructions.md
+
 *.db
 !src/main/resources/backend/restaurant.db
