--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,4 +10,10 @@
         <welcome-file>index.html</welcome-file>
     </welcome-file-list>
 
+    <!-- Forward all non-API requests to index.html for client-side routing -->
+    <error-page>
+        <error-code>404</error-code>
+        <location>/index.html</location>
+    </error-page>
+
 </web-app>
