--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,11 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/utilities": "^3.2.2",
     "@emotion/react": "^11.13.0",
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^5.2.2",
     "@mantine/core": "^7.13.2",
     "@mantine/dates": "^7.13.2",
@@ -22,21 +26,18 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
     "react-router-dom": "^7.9.4",
-    "zod": "^4.1.12",
-    "@headlessui/react": "^2.2.0",
-    "@heroicons/react": "^2.1.5"
-
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@tailwindcss/postcss": "^4.1.14",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
-    "@tailwindcss/postcss": "^4.1.14",
     "@types/node": "^24.6.0",
-    "@types/testing-library__jest-dom": "^6.0.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
+    "@types/testing-library__jest-dom": "^6.0.0",
     "@vitejs/plugin-react": "^5.0.4",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.36.0",
